Updated applymap to map

--- a/2-Data-Science-Studies/data_class_01/data_class_01.ipynb
+++ b/2-Data-Science-Studies/data_class_01/data_class_01.ipynb
@@ -2121,10 +2121,10 @@
       "source": [
         "# Apply a style to the DataFrame to highlight in red the characters with Force Power greater than 80.\n",
         "\n",
-        "def destacar_pendente(valor):\n",
-        "    return 'font-weight: bold; color: red' if (df[df['Personagem'] == valor]['Poder_Forca'] > 80).any() else ''\n",
+        "def highlight_name(value):\n",
+        "    return 'font-weight: bold; color: red' if (df[df['Personagem'] == value]['Poder_Forca'] > 80).any() else ''\n",
         "\n",
-        "df.style.applymap(destacar_pendente, subset=['Personagem'])"
+        "df.style.amap(highlight_name, subset=['Personagem'])"
       ],
       "metadata": {
         "colab": {
