--- a/2-Data-Science-Studies/data_class_07/data_class_07.ipynb
+++ b/2-Data-Science-Studies/data_class_07/data_class_07.ipynb
@@ -40,7 +40,7 @@
         "\n",
         "alpha = 0.05\n",
         "if p_side < alpha:\n",
-        "    result = \"Reject the null hypothesis: Class B performed better.\"\n",
+        "    result = \"Reject the null hypothesis.\"\n",
         "else:\n",
         "    result = \"Fail to reject the null hypothesis.\"\n",
         "\n",
