--- a/2-Data-Science-Studies/data_class_08/data_class_08.ipynb
+++ b/2-Data-Science-Studies/data_class_08/data_class_08.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 2,
       "metadata": {
         "id": "21x4BOmjn_vU",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "662bb5e8-9fcf-4013-81bf-5e963e0792a0"
+        "outputId": "5a921b6a-e599-4f80-d35e-59955fae1997"
       },
       "outputs": [
         {
@@ -39,7 +39,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-965bb3be-f85c-4fe4-8071-c4f9b0393762\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-51731b9a-92a4-4f34-977a-64d25a0e9ca0\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -136,7 +136,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-965bb3be-f85c-4fe4-8071-c4f9b0393762')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-51731b9a-92a4-4f34-977a-64d25a0e9ca0')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -188,12 +188,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-965bb3be-f85c-4fe4-8071-c4f9b0393762 button.colab-df-convert');\n",
+              "        document.querySelector('#df-51731b9a-92a4-4f34-977a-64d25a0e9ca0 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-965bb3be-f85c-4fe4-8071-c4f9b0393762');\n",
+              "        const element = document.querySelector('#df-51731b9a-92a4-4f34-977a-64d25a0e9ca0');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -213,8 +213,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d9be2294-8a0f-48dd-93f2-1b3d4c98f8c6\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d9be2294-8a0f-48dd-93f2-1b3d4c98f8c6')\"\n",
+              "    <div id=\"df-3822b3b2-a58c-409d-9552-77f4a5a5a4ec\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3822b3b2-a58c-409d-9552-77f4a5a5a4ec')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -333,7 +333,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d9be2294-8a0f-48dd-93f2-1b3d4c98f8c6 button');\n",
+              "            document.querySelector('#df-3822b3b2-a58c-409d-9552-77f4a5a5a4ec button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -350,7 +350,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 2
         }
       ],
       "source": [
@@ -366,16 +366,17 @@
       "source": [
         "# Shapiro function\n",
         "\n",
-        "def normality_result(p, group_name, alpha=0.05):\n",
+        "def normality_result(group_name, group, alpha=0.05):\n",
+        "    stat, p = shapiro(group)\n",
         "    if p < alpha:\n",
         "        return f\"{group_name} does not have a normal distribution.\"\n",
         "    else:\n",
-        "        return f\"{group_name} does have a normal distribution.\"\n"
+        "        return f\"{group_name} does have a normal distribution.\""
       ],
       "metadata": {
         "id": "gB_VWVAsrKQW"
       },
-      "execution_count": 71,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -399,7 +400,7 @@
       "metadata": {
         "id": "BRpR56xMxPtR"
       },
-      "execution_count": 91,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -407,7 +408,8 @@
       "source": [
         "# Levene function\n",
         "\n",
-        "def variance_result(p, alpha=0.05):\n",
+        "def variance_result(group1, group2, alpha=0.05):\n",
+        "    stat, p = levene(group1, group2)\n",
         "    if p < alpha:\n",
         "        return f\"The groups are not homoscedastic.\"\n",
         "    else:\n",
@@ -416,7 +418,7 @@
       "metadata": {
         "id": "_9NeUOKsr2tz"
       },
-      "execution_count": 83,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -428,11 +430,8 @@
         "group2 = df[(df['sexo'] == 'F') & (df['idade'] > 50)]['hdl_depois']\n",
         "\n",
         "# Checking normality\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -457,9 +456,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ii3LgIDh-L3",
-        "outputId": "c7d368cb-c0e1-4c24-84f5-d8532852d0b6"
+        "outputId": "aeb1565e-83ad-4ad6-df7f-d779c8e54139"
       },
-      "execution_count": 92,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,22 +483,15 @@
         "group2 = df[df['sexo'] == 'M']['ldl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
         "print(outlier_ratio_check(group2, \"Group 2\"))\n",
         "\n",
         "# Checking variance:\n",
-        "stat, p = levene(group1, group2)\n",
-        "\n",
-        "variance = variance_result(p)\n",
-        "\n",
-        "print(variance)\n",
+        "print(variance_result(group1, group2))\n",
         "\n",
         "# Running related test:\n",
         "t_stat, p_bilateral = ttest_ind(group2, group1)\n",
@@ -519,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rMxkJ4nOkrEg",
-        "outputId": "f1298196-c913-4c7e-cbd8-616b4f746c70"
+        "outputId": "55e60c10-9fd6-4244-9cdf-309599efec55"
       },
-      "execution_count": 93,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,11 +539,8 @@
         "group2 = df[df['sexo'] == 'M']['ldl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -576,9 +565,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hvYf1cFbk9up",
-        "outputId": "bd0b466e-08f5-402b-ef99-f67f58dfa332"
+        "outputId": "335ed73e-bf63-454f-cbe5-b791eb0fd92a"
       },
-      "execution_count": 94,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,9 +591,7 @@
         "group1 = df[df['idade'] > 60]['hdl_antes']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -627,9 +614,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x1iCO1XtnWxL",
-        "outputId": "698d3b2f-bbd6-427b-ba34-42ddd6c63f72"
+        "outputId": "12ba77f7-96fd-406e-e4ef-b8f8101c91a7"
       },
-      "execution_count": 95,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,11 +639,8 @@
         "group2 = df[df['peso'] > 90]['hdl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -681,9 +665,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3m_RVZCrn5GU",
-        "outputId": "71bc76ae-7c02-423d-b1fc-e004285e3e5d"
+        "outputId": "dc73f719-067a-4e35-ee56-fe0ab0e9ade5"
       },
-      "execution_count": 97,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,11 +692,8 @@
         "group2 = df[(df['sexo'] == 'M') & (df['idade'] < 40)]['hdl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -737,9 +718,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5pTxEhZYo6Gy",
-        "outputId": "4b08c4f1-944b-4bfe-b6b7-ee08a328286a"
+        "outputId": "0a6ff309-ae7c-4a37-8a45-9a59250ee92b"
       },
-      "execution_count": 98,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,9 +744,7 @@
         "group1 = df[df['idade'] > 65]['ldl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -788,9 +767,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAJ2TSNDpL_x",
-        "outputId": "0b8ecee4-5c61-4742-efac-8aa23c12677a"
+        "outputId": "6572cccd-34be-467c-e9c7-898fe1c9cad9"
       },
-      "execution_count": 99,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,11 +792,8 @@
         "group2 = df[(df['sexo'] == 'F') & (df['peso'] < 60)]['hdl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -842,9 +818,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OCAlh74Hpcm3",
-        "outputId": "3a669700-505f-4e0e-811c-f3f2685a91e0"
+        "outputId": "f8c5a773-d77b-4798-a44f-7cd5075ce22d"
       },
-      "execution_count": 100,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,22 +845,15 @@
         "group2 = df[df['idade'] >= 40]['ldl_depois']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "stat, p2 = shapiro(group2)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
-        "print(normality_result(p2, \"Group 2\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
+        "print(normality_result(\"Group 2\", group2))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
         "print(outlier_ratio_check(group2, \"Group 2\"))\n",
         "\n",
         "# Checking variance:\n",
-        "stat, p = levene(group1, group2)\n",
-        "\n",
-        "variance = variance_result(p)\n",
-        "\n",
-        "print(variance)\n",
+        "print(variance_result(group1, group2))\n",
         "\n",
         "# Running related test:\n",
         "t_stat, p_bilateral = ttest_ind(group2, group1)\n",
@@ -904,9 +873,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KEY89E-utr8b",
-        "outputId": "24cee60e-fefe-4d1e-a439-0b1ac78bb431"
+        "outputId": "8e97f580-560a-464e-fc74-4e33760d24aa"
       },
-      "execution_count": 101,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,9 +900,7 @@
         "group1 = df[df['altura'] > 1.80]['hdl_antes']\n",
         "\n",
         "# Checking normality:\n",
-        "stat, p1 = shapiro(group1)\n",
-        "\n",
-        "print(normality_result(p1, \"Group 1\"))\n",
+        "print(normality_result(\"Group 1\", group1))\n",
         "\n",
         "# Checking outliers\n",
         "print(outlier_ratio_check(group1, \"Group 1\"))\n",
@@ -956,9 +923,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_AAPzex8uBPs",
-        "outputId": "1cfddd1e-ae7b-4974-b628-b2a7d56d7d0a"
+        "outputId": "ae63baf2-e9ca-4962-97ca-34ad96c389dd"
       },
-      "execution_count": 102,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
